Add Console menu hierarchy APIs
